--- a/lib/templates/detail.html
+++ b/lib/templates/detail.html
@@ -10,12 +10,13 @@
   }
 </script>
 <script src="/socket.io/socket.io.js"></script>
+<script src="/media/js/glmatrix.js"></script>
 <script src="/media/js/context.js"></script>
 <script src="/media/js/context_object.js"></script>
 <script src="/media/js/definition.js"></script>
 <script src="/media/js/game_defs.js"></script>
 <script src="/media/js/require.js" data-main="/media/js/main"></script>
 
-<canvas id="canvas"></canvas>
+<canvas id="canvas" width="640" height="480"></canvas>
 <button>Click here to start</button>
 
