Added fullscreen mode plus mouse lock.

--- a/lib/templates/detail.html
+++ b/lib/templates/detail.html
@@ -19,5 +19,7 @@
 <script src="/media/js/require.js" data-main="/media/js/main"></script>
 
 <canvas id="canvas" width="640" height="480"></canvas>
-<button>Click here to start</button>
-
+<button id="id_fullscreen">Click for fullscreen.</button>
+<p>In windowed mode, use two finger scroll left and right to rotate, WASD for movement, and click to fire.
+Press <pre>`</pre> to toggle fullscreen mode.
+</p>
