--- a/media/css/styles.css
+++ b/media/css/styles.css
@@ -73,6 +73,10 @@ table { border-collapse: collapse; border-spacing: 0; }
 
 /**** ACTUAL STYLES ****/
 
+body { font-size:1.0em; line-height:1.5em; color:#323232; }
+
+h1,h2,h3,h4,h5 { color:black; }
+
 #container { opacity:1.0; -webkit-transition:opacity 0.2s ease-in; -moz-transition:opacity 0.2s ease-in; -ms-transition:opacity 0.2s ease-in; transition:opacity 0.2s ease-in; position:relative; }
 #container.loading { opacity:0.0; }
 
@@ -85,5 +89,7 @@ footer aside { float:left; }
 blockquote { position:absolute; width:200px; left:-248px; }
 blockquote > * { position:relative; top:-3.5em; }
 
-#container img[alt=left] { float:left; } 
-#container img[alt=right] { float:right; }
+#container img[alt=left] { float:left; margin-right:1em; margin-bottom:1em; } 
+#container img[alt=right] { float:right;  margin-left:1em; margin-bottom:1em; }
+
+#container img { border-radius:3px; -webkit-box-shadow:0px 0px 8px 2px rgba(0,0,0,0.3); }
