--- a/media/css/styles.css
+++ b/media/css/styles.css
@@ -75,7 +75,7 @@ table { border-collapse: collapse; border-spacing: 0; }
 
 body { font-size:1.0em; line-height:1.5em; color:#323232; }
 
-h1,h2,h3,h4,h5 { color:black; }
+h1,h2,h3,h4,h5 { color:black; clear:both; }
 
 #container { opacity:1.0; -webkit-transition:opacity 0.2s ease-in; -moz-transition:opacity 0.2s ease-in; -ms-transition:opacity 0.2s ease-in; transition:opacity 0.2s ease-in; position:relative; }
 #container.loading { opacity:0.0; }
@@ -86,10 +86,22 @@ footer > div > a:first-child { border-radius:3px; border:1px solid black; displa
 footer a img { width:64px; height:64px; float:left; }
 footer aside { float:left; }
 
-blockquote { position:absolute; width:200px; left:-248px; }
+blockquote { position:absolute; width:200px; left:-256px; font-size:0.9em; text-align:right; }
 blockquote > * { position:relative; top:-3.5em; }
 
+.right + blockquote { text-align:left; right:-256px; } 
+
+#container .imgleft,
+#container img[alt=plainleft],
 #container img[alt=left] { float:left; margin-right:1em; margin-bottom:1em; } 
+
+#container .imgright,
+#container img[alt=plainright],
 #container img[alt=right] { float:right;  margin-left:1em; margin-bottom:1em; }
 
+
+
+#container .imgleft,
+#container .imgright,
 #container img { border-radius:3px; -webkit-box-shadow:0px 0px 8px 2px rgba(0,0,0,0.3); }
+#container img[alt^=plain] { border-radius:0px; -webkit-box-shadow:none; }
