--- a/media/css/styles.css
+++ b/media/css/styles.css
@@ -102,7 +102,7 @@ blockquote * { color:#663216; }
 #container img[alt=plainright],
 #container img[alt=right] { float:right;  margin-left:1em; margin-bottom:1em; }
 
-
+footer { clear:both; }
 
 #container .imgleft,
 #container .imgright,
